added field 'current_delay' to doctors

--- a/test/fixtures/doctors.yml
+++ b/test/fixtures/doctors.yml
@@ -3,27 +3,32 @@ doctor1:
   title: Mr
   first_name: Niell
   last_name: Armstrong
+  current_delay: 45
 
 doctor2:
   clinic: :clinic2
   title: Prof
   first_name: Fred
   last_name: Littlechild
+  current_delay: 15
 
 doctor3:
   clinic: :clinic3
   title: Mr
   first_name: Alex
   last_name: Breeching
+  current_delay: 0
 
 doctor4:
   clinic: :clinic4
   title: Miss
   first_name: Iris
   last_name: Reteena
+  current_delay: 90
 
 doctor5:
   clinic: :clinic5
   title: Dr
   first_name: Xin
   last_name: Nu-Chin
+  current_delay: 30
