--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -1,149 +1,174 @@
 appointment1:
   patient: :patient1
   doctor: :doctor1
-  datetime: 06/22/2011 09:00
+  datetime: "2011-06-22 09:00"
   attending: true
+  reschedule: false
 
 appointment2:
   patient: :patient2
   doctor: :doctor1
-  datetime: 06/22/2011 09:20
+  datetime: "2011-06-22 09:20"
   attending: true
+  reschedule: false
 
 appointment3:
   patient: :patient3
   doctor: :doctor1
-  datetime: 06/22/2011 09:40
+  datetime: "2011-06-22 09:40"
   attending: true
+  reschedule: false
 
 appointment4:
   patient: :patient4
   doctor: :doctor1
-  datetime: 06/22/2011 10:00
+  datetime: "2011-06-22 10:00"
   attending: true
+  reschedule: false
 
 appointment5:
   patient: :patient5
   doctor: :doctor1
-  datetime: 06/22/2011 10:20
+  datetime: "2011-06-22 10:20"
   attending: true
+  reschedule: false
 
 appointment6:
   patient: :patient6
   doctor: :doctor2
-  datetime: 06/22/2011 09:00
+  datetime: "2011-06-22 09:00"
   attending: true
+  reschedule: false
 
 appointment7:
   patient: :patient7
   doctor: :doctor2
-  datetime: 06/22/2011 09:10
+  datetime: "2011-06-22 09:10"
   attending: true
+  reschedule: false
 
 appointment8:
   patient: :patient8
   doctor: :doctor2
-  datetime: 06/22/2011 09:20
+  datetime: "2011-06-22 09:20"
   attending: true
+  reschedule: false
 
 appointment9:
   patient: :patient9
   doctor: :doctor2
-  datetime: 06/22/2011 09:30
+  datetime: "2011-06-22 09:30"
   attending: true
+  reschedule: false
 
 appointment10:
   patient: :patient10
   doctor: :doctor2
-  datetime: 06/22/2011 09:40
+  datetime: "2011-06-22 09:40"
   attending: true
+  reschedule: false
 
 appointment11:
   patient: :patient11
   doctor: :doctor3
-  datetime: 06/22/2011 09:00
+  datetime: "2011-06-22 09:00"
   attending: true
+  reschedule: false
 
 appointment12:
   patient: :patient12
   doctor: :doctor3
-  datetime: 06/22/2011 09:20
+  datetime: "2011-06-22 09:20"
   attending: true
+  reschedule: false
 
 appointment13:
   patient: :patient13
   doctor: :doctor3
-  datetime: 06/22/2011 09:40
+  datetime: "2011-06-22 09:40"
   attending: true
+  reschedule: false
 
 appointment14:
   patient: :patient14
   doctor: :doctor3
-  datetime: 06/22/2011 10:00
+  datetime: "2011-06-22 10:00"
   attending: true
+  reschedule: false
 
 appointment15:
   patient: :patient15
   doctor: :doctor3
-  datetime: 06/22/2011 10:20
+  datetime: "2011-06-22 10:20"
   attending: true
+  reschedule: false
 
 appointment16:
   patient: :patient16
   doctor: :doctor4
-  datetime: 06/22/2011 14:00
+  datetime: "2011-06-22 14:00"
   attending: true
+  reschedule: false
 
 appointment17:
   patient: :patient17
   doctor: :doctor4
-  datetime: 06/22/2011 14:10
+  datetime: "2011-06-22 14:10"
   attending: true
+  reschedule: false
 
 appointment18:
   patient: :patient18
   doctor: :doctor4
-  datetime: 06/22/2011 14:20
+  datetime: "2011-06-22 14:20"
   attending: true
+  reschedule: false
 
 appointment19:
   patient: :patient19
   doctor: :doctor4
-  datetime: 06/22/2011 14:30
+  datetime: "2011-06-22 14:30"
   attending: true
+  reschedule: false
 
 appointment20:
   patient: :patient20
   doctor: :doctor4
-  datetime: 06/22/2011 14:40
+  datetime: "2011-06-22 14:40"
   attending: true
+  reschedule: false
 
 appointment21:
   patient: :patient21
   doctor: :doctor5
-  datetime: 06/22/2011 14:00
+  datetime: "2011-06-22 14:00"
   attending: true
+  reschedule: false
 
 appointment22:
   patient: :patient22
   doctor: :doctor5
-  datetime: 06/22/2011 14:10
+  datetime: "2011-06-22 14:10"
   attending: true
+  reschedule: false
 
 appointment23:
   patient: :patient23
   doctor: :doctor5
-  datetime: 06/22/2011 14:20
+  datetime: "2011-06-22 14:20"
   attending: true
+  reschedule: false
 
 appointment24:
   patient: :patient24
   doctor: :doctor5
-  datetime: 06/22/2011 14:30
+  datetime: "2011-06-22 14:30"
   attending: true
+  reschedule: false
 
 appointment25:
   patient: :patient25
   doctor: :doctor5
-  datetime: 06/22/2011 14:40
+  datetime: "2011-06-22 14:40"
   attending: true
+  reschedule: false
